# libscapi

./: .dockerignore  .gitignore  .gitignore.orig  .travis.yml  CMakeLists.txt  Dockerfile  IntermediateModularOT.cpp  Makefile  Postman.cpp  README.md  build.sh  conn.cpp  firstApp.cpp  log.txt  makefile  makefile1  makefile_UCOT  makefile_libs  qREADME.md  qmakefile  rebuild.sh  rebuildBase.sh  rebuildLibs.sh  rebuild_docker_image.sh  runOT.cpp
UC_DDH_OT/: OTParties.cpp  OTParties.hpp  Postman.hpp  crs
build_scripts/: INSTALL.MD  INSTALL.md  merge_git.sh  rebuild.sh  rebuildBase.sh  rebuildLibs.sh
comm_client/: CMakeLists.txt  cc_proxy_protocol.h  cct_proxy_client.cpp  cct_proxy_client.h  cct_proxy_service.cpp  cct_proxy_service.h  comm_client.cpp  comm_client.h  comm_client_cb_api.h  comm_client_tcp_mesh.cpp  comm_client_tcp_mesh.h  protocol_barrier.cpp  protocol_barrier.h
comm_client/comm_client_tcp_proxy/: CMakeLists.txt  cc_proxy_protocol.h  cct_proxy_service.cpp  cct_proxy_service.h  main.cpp
dockerfiles/: Dockerfile  DockerfileLibs  DockerfileLibs_Ubuntu_16:04  DockerfileProtocols  Dockerfile_16:04  PrerequisitesDockerfie  PrerequisitesDockerfie_Ubuntu16:04
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst
examples/: CMakeLists.txt  examples_main.cpp  examples_main.hpp  makefile
include/CryptoInfra/: Key.hpp  Measurement.hpp  PlainText.hpp  Protocol.hpp  SecurityLevel.hpp
include/circuits/: ArithmeticCircuit.hpp  BooleanCircuits.hpp  Compat.h  Config.h  FastGarbledBooleanCircuit.hpp  FourToTwoGarbledBoleanCircuitNoAssumptions.h  FreeXorGarbledBooleanCircuit.h  GarbledBooleanCircuit.h  GarbledBooleanCircuitFixedKey.h  GarbledBooleanCircuitNoFixedKey.h  GarbledBooleanCircuitNoIntrinsics.h  GarbledCircuitFactory.hpp  GarbledGate.h  HalfGatesGarbledBoleanCircuitNoFixedKey.h  HalfGatesGarbledBooleanCircuit.h  RowReductionGarbledBooleanCircuit.h  StandardGarbledBooleanCircuit.h  TGate.hpp  TedKrovetzAesNiWrapperC.h  intrinsic.h
include/comm/: Comm.hpp  CommUDP.hpp  MPCCommunication.hpp  Message.hpp  TwoPartyComm.hpp
include/cryptoInfra/: PlainText.hpp  Protocol.hpp
include/infra/: CircuitConverter.hpp  Common.hpp  ConfigFile.hpp  File.hpp  Log.hpp  MathAlgorithms.hpp  Measurement.hpp  NTLWrapper.hpp  SSE2NEON.h  Scanner.hpp  sse2neon.h
include/interactive_mid_protocols/: CommitmentScheme.hpp  CommitmentSchemeElGamal.hpp  CommitmentSchemeElGamalHash.hpp  CommitmentSchemeEquivocal.hpp  CommitmentSchemePedersen.hpp  CommitmentSchemePedersenHash.hpp  CommitmentSchemePedersenTrapdoor.hpp  CommitmentSchemeSimpleHash.hpp  OT.hpp  OTBatch.hpp  OTExtensionBristol.hpp  OTExtensionLibote.hpp  OTExtensionMalicious.hpp  OTFullSimulation.hpp  OTFullSimulationROM.hpp  OTOneSidedSimulation.hpp  OTPrivacyOnly.hpp  OTSemiHonest.hpp  OTSemiHonestExtension.hpp  OTUC.hpp  RandomValue.hpp  SigmaProtocol.hpp  SigmaProtocolAnd.hpp  SigmaProtocolCramerShoupEncryptedValue.hpp  SigmaProtocolDH.hpp  SigmaProtocolDHExtended.hpp  SigmaProtocolDamgardJurikEncryptedValue.hpp  SigmaProtocolDamgardJurikEncryptedZero.hpp  SigmaProtocolDamgardJurikProduct.hpp  SigmaProtocolDlog.hpp  SigmaProtocolElGamalCmtKnowledge.hpp  SigmaProtocolElGamalCommittedValue.hpp  SigmaProtocolElGamalEncryptedValue.hpp  SigmaProtocolElGamalPrivateKey.hpp  SigmaProtocolOr.hpp  SigmaProtocolOrMultiple.hpp  SigmaProtocolOrTwo.cpp  SigmaProtocolOrTwo.hpp  SigmaProtocolPedersen.hpp  SigmaProtocolPedersenCmtKnowledge.hpp  (+2 more)
include/mid_layer/: AsymmetricEnc.hpp  BiLinearMaps.hpp  CramerShoupEnc.hpp  DamgardJurikEnc.hpp  ElGamalEnc.hpp  Mac.hpp  OpenSSLMac.h  OpenSSLSymmetricEnc.hpp  Paillier.hpp  PlainText.hpp  SymmetricEnc.hpp  key.hpp
include/primitives/: AES_PRG.hpp  Dlog.hpp  DlogOpenSSL.hpp  Hash.hpp  HashBlake2.hpp  HashOpenSSL.hpp  Kdf.hpp  Key.hpp  Matrix.hpp  Mersenne.hpp  Prf.hpp  PrfOpenSSL.hpp  Prg.hpp  RandomOracle.hpp  SecurityLevel.hpp  TrapdoorPermutation.hpp  TrapdoorPermutationOpenSSL.hpp  TrapdoorPermutations.hpp  mac.hpp
include/quantum_oblivious_key_distribution_linux/: qokd_emulator_rx  qokd_emulator_tx
include/quantum_random_oblivious_transfer/: key_aux.txt  main.c  ot_test  qot_receiver.c  qot_receiver.h  qot_sender.c  qot_sender.h
lib/COTShortKeys/: COTSK.cpp  COTSK.h  COTSK_Receiver_impl.h  COTSK_Sender_impl.h  COTSK_Test.cpp  COTSK_impl.h  makefile
lib/EMP/emp-ot/: CMakeLists.txt
lib/EMP/emp-ot/emp-ot/: latticeInclude.h
lib/JsonCpp/: CMakeCache.txt  cmake_install.cmake
lib/KCP/: Makefile
lib/MaliciousOTExtension/: Makefile
lib/MiraclWin64/: MiraclWin64.sln  MiraclWin64.vcxproj  MiraclWin64.vcxproj.filters
lib/OTExtension/: Makefile  Makefile.bat
lib/OTExtensionBristol/: Makefile  cMakefile
lib/ScGarbledCircuit/: Compat.h  FreeXorGarbledBooleanCircuit.cpp  FreeXorGarbledBooleanCircuit.h  GarbledBooleanCircuit.cpp  GarbledBooleanCircuit.h  GarbledGate.h  HalfGatesGarbledBooleanCircuit.cpp  HalfGatesGarbledBooleanCircuit.h  README.md  RowReductionGarbledBooleanCircuit.cpp  RowReductionGarbledBooleanCircuit.h  StandardGarbledBooleanCircuit.cpp  (+4 more)
myUCOT/: OTParties.cpp  OTParties.hpp  Postman.cpp  Postman.hpp  makefile  modularOT.cpp
protocols/GMW/: CMakeCache.txt  CMakeLists.txt  Circuit.cpp  Circuit.h  GMW  GMW.cbp  GMWParty.cpp  GMWParty.h  MPCCommunication.cpp  MPCCommunication.h  Makefile  NigelAes50Parties.txt  NigelAes5Parties.txt  NigelAes7Parties.txt  Parties  README  cmake_install.cmake  main.cpp  run_all.sh  run_protocol.sh
protocols/ReplicatedSecretSharing3PartiesArithmetic/: CMakeLists.txt  ProtocolParty.h  ProtocolTimer.cpp  README
protocols/SemiHonestYao/: App1.cpp  CMakeLists.txt  Makefile  README  YaoConfig.txt  YaoParties.cpp  YaoParties.hpp  makefile
protocols/YaoSingleExecution/: CMakeLists.txt  Makefile  README  YaoSEParty.cpp  YaoSEParty.h  main.cpp
samples/: CommConfig.txt  comm_example.cpp  examples_main.cpp  examples_main.hpp  makefile  simple_dlog.cpp  simple_sha1.cpp
test/: catch.hpp  interactiveMidProtocolsTests.cpp  makefile  tests.cpp
tests/: CMakeLists.txt  interactiveMidProtocolsTests.cpp  makefile  tests.cpp
(+371 files in other folders)
